--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<%= render 'layouts/header' %>
-	<%= yield %>
-	<%= render 'layouts/footer' %>
-	
-	<%= javascript_include_tag "application" %>
-	<%= render 'layouts/shim' %>
+  <%= render 'layouts/header' %>
+
+  <% flash.each do |key, value| %>
+    <div class="<%= key %>"><%= value %></div>
+  <% end %>
+  
+  <%= yield %>
+  
+  <%= render 'layouts/footer' %>
+
+  <%= debug(params) if Rails.env.development? %>
+  
+  <%= javascript_include_tag "application" %>
+  <%= render 'layouts/shim' %>
 </body>
 </html>
