--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,25 @@
 <%= provide(:title, 'Signup') %>
 
-<h1>Users#signup</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Signup</h1>
+
+<div>
+	<%= form_for(@user) do |f| %>
+
+		<%= render 'shared/error_messages' %>
+
+		<%= f.label :name %>
+		<%= f.text_field :name %>
+		
+		<%= f.label :email %>
+		<%= f.text_field :email %>
+		
+		<%= f.label :password %>
+		<%= f.password_field :password %>
+		
+		<%= f.label :password_confirmation, "Confirmation" %>
+		<%= f.password_field :password_confirmation %>
+
+		<%= f.submit "Signup" %>
+
+	<% end %>
+</div>
