--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= render 'layouts/header' %>
 
   <% flash.each do |key, value| %>
-    <div class="<%= key %>"><%= value %></div>
+    <%= content_tag(:div, value, class: "alert alert-#{key}") %>
   <% end %>
   
   <%= yield %>
